cannonical links cause google asked for more to index all the pages instead of most also its a good idea

--- a/hoteelgibbs.html
+++ b/hoteelgibbs.html
@@ -20,11 +20,15 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Your &amp; Page</title>
-  <link rel="canonical" href="https://www.minnowspace.com/home.amp.html">
+  <title>TEA</title>
+  <link rel="canonical" href="https://www.ampstart.com/templates/themes_2/home.amp">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
-
+  <meta name="description"
+    content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
+  <meta name="keywords"
+    content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
+  <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 
@@ -2346,8 +2350,6 @@ limitations under the License.
     <nav class="ampstart-sidebar-nav ampstart-nav">
       <ul class="list-reset m0 p0 ampstart-label">
         <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="index.html">Home</a></li>
-        <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="menu.amp.html">Menu</a></li>
-        <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="#locations">Locations & Hours</a></li>
       </ul>
     </nav>
 
@@ -2375,8 +2377,9 @@ limitations under the License.
           </svg></a>
       </li>
       <li>
-        <a href="#" target="_blank" class="inline-block p1" aria-label="Link to AMP HTML E-mail"><svg
-            xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewBox="0 0 56 43">
+        <a href="mailto:bcebel@gmail.com" target="_blank" class="inline-block p1"
+          aria-label="Link to AMP HTML E-mail"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4"
+            viewBox="0 0 56 43">
             <title>email</title>
             <path
               d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z"
@@ -2394,22 +2397,25 @@ limitations under the License.
     <!-- Start Fullpage Hero -->
     <figure class="ampstart-image-fullpage-hero m0 relative mb4">
       <amp-img width="404" height="720" alt="Welcome to Beck &amp; Galo Modern American Cuisine" layout="responsive"
-        src="./img/themes_2/hero.webp" media="(max-width: 415px)"></amp-img>
-      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height" src="./img/themes_2/hero.webp"
-        media="(min-width: 416px)"></amp-img>
+        src="./img/tea/pexels-minan1398-1624554.webp" media="(max-width: 415px)"></amp-img>
+      <amp-img height="720" alt="Welcome to Your &amp; Lets sell!" layout="fixed-height"
+        src="./img/tea/pexels-minan1398-1624554.webp" media="(min-width: 416px)"></amp-img>
       <figcaption class="absolute top-0 right-0 bottom-0 left-0">
         <header class="p3">
           <h1 class="ampstart-fullpage-hero-heading mb3">
             <span class="ampstart-fullpage-hero-heading-text">
-              <span class="h6 block caps">Welcome to</span><span class="h1 block bold caps my1">Your & Page</span><span
-                class="h6 block caps">Sales & Marketing</span>
+              <span class="h6 block caps" style="color:black"></span><span class="h1 block bold caps my1"
+                style="color:black">It's OK to Microwave Your Tea </span><span class="h6 block caps"
+                style="color:black">My dad was British and he microwaved his tea daily. I'm giving you
+                permission.</span>
             </span>
           </h1>
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-          <a class="ampstart-btn inline-block ampstart-fullpage-hero-cta h5 m3 text-decoration-none"
-            href="menu.amp.html">View Menu</a>
+          <a href="https://www.kqzyfj.com/click-101316119-11430556">
+            <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
+
         </footer>
       </figcaption>
     </figure>
@@ -2418,49 +2424,94 @@ limitations under the License.
 
   <main id="content" role="main">
     <article class="px3">
-      <h2 id="story" class="my4 theme2-anchored">Our Story</h2>
-      <p class="mb1 ampstart-dropcap">Showcase Your Brand Here!
+      <h2 id="story" class="my4 theme2-anchored">Why I Love Tea</h2>
+      <p class="mb1 ampstart-dropcap">Tea is more than a drink—it's a ritual, a connection to the past, and a moment of
+        peace in the present. Growing up, tea
+        was a part of life. My dad, being English, always kept a teapot on hand, complete with a cozy to keep it warm. I
+        still
+        remember the first time I experienced formal tea in London back in 1980. The elegance of it all—the porcelain
+        cups, the
+        delicate sandwiches—left a lasting impression, tying tea to some of my fondest memories. He'd have a spot of tea
+        when he was feeling "coffee'd out".</p>
+      <p class="mb1">
+        Tea also reminds me of home, the New England coast, where brewing a pot of gunpowder green tea became a personal
+        ritual
+        while practicing guitar. The bold, invigorating flavor matched the rhythm of the waves and the cool breeze from
+        the
+        ocean, creating moments that felt like pure inspiration. It's a real Boston tea party up in there.</p>
+      <a href="https://www.kqzyfj.com/click-101316119-11430556">
 
-        Welcome to the affiliate marketing space where your product takes center stage. This is the spot where I’ll
-        feature your
-        content in a way that’s engaging, professional, and designed to drive results.</p>
+        <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="" border="0" /></a>
       <p class="mb1">
-        Your Product, Front and Center!
-        Imagine this page showcasing your brand with eye-catching visuals, compelling descriptions, and strategic
-        placement.
-        I’ll craft content that highlights your product’s best features, connecting it with my audience in a way that
-        resonates
-        and inspires action.</p>
-      <p class="mb1">
-        Affiliate Links for Seamless Conversions
-        Your affiliate links will be prominently displayed here, allowing my audience to click through and make
-        transactions
-        directly on your site. Every element will be designed to guide users effortlessly from interest to purchase.
+        In the winter, there's nothing better than a steaming cup of gourmet tea to warm you up on a chilly day or to
+        reset and
+        recharge on New Year's morning. It feels like a fresh start in a cup—a way to begin the year with clarity and
+        intention.
+        And when summer rolls around, artisan iced tea becomes a refreshing companion, cooling you down while still
+        bringing
+        that rich, vibrant flavor to the forefront. I'm in Texas now and southerners are serious about their sweet tea
+        y'all.
 
       </p>
-      <p class="mb1">Interactive Call-to-Actions: Buttons, banners, or even embedded videos that catch attention and
-        encourage clicks.
-        Engaging Content: Reviews, tutorials, or stories that build trust and excitement around your product.
-        Smooth User Experience: Fast-loading pages and mobile-friendly designs to keep users engaged.
-        Integrated Social Media Outreach
-      </p>
-      <p class="mb1">This page won’t work alone! With my network of over 10,000 followers on X (formerly Twitter) and
-        engaging content on
-        TikTok, YouTube, and other platforms, I’ll drive traffic directly here—maximizing your visibility and sales
-        opportunities.
 
-        Let’s collaborate to showcase your brand in the best light and turn visitors into loyal customers. Your success
-        is just
-        a click away!</p>
+      <p class="mb1">Whether it's the earthy depth of loose tea or the soothing ritual of steeping and sipping, tea
+        invigorates both my mind
+        and body. It’s comfort and energy in a single cup, a moment of pause that somehow sparks creativity and calm all
+        at
+        once.
+      </p>
+      <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
+      <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
+      <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
+        <amp-img src="./img/tea/pexels-aqtai-2013749.webp" width="300" height="200" alt="Dining area" on="tap:lightbox"
+          role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-d-ng-nhan-324384-1477542.webp" width="267" height="200" alt="Bar area"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-lilartsy-1793035.webp" width="300" height="200" alt="Caramel Banana Waffles"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-minan1398-1240961.webp" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-minan1398-1624554.webp" width="300" height="200" alt="Steak" on="tap:lightbox"
+          role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-minan1398-1629185.webp" width="300" height="200" alt="Key Lime Pie"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-minan1398-981091.webp" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-nietjuh-1831744.webp" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="200" alt="Pumpkin Soup"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/tea/pexels-quang-nguyen-vinh-222549-2884905.webp" width="300" height="200"
+          alt="Pumpkin Soup" on="tap:lightbox" role="button" tabindex="0"></amp-img>
+      </amp-carousel>
+
+      <p class="mb1">Every cup of tea feels like an embrace of tradition, a journey to new flavors, and a reminder to
+        slow down and savor
+        life’s simple pleasures and it is ok to microwave it, just not with a any metal strainers!</p>
+
+      <p class="mb1">When it comes to tea, the possibilities are as endless as the joy it brings. There’s a variety for
+        every mood, every
+        season, and every palate. You’ve got your classics—Earl Grey, the quintessential cup of elegance, and timeless
+        white
+        tea, delicate and pure. For those seeking a spicy kick, chai has you covered, while green tea offers earthy
+        comfort with
+        a side of wellness. Ginseng Green tea with ginger will give you a nice well rounded flavor with some honey. And
+        if you're in the mood for something bold and ceremonial, matcha’s vibrant green hue and
+        creamy
+        texture never disappoint.</p>
       <div class="my4 mxn3 center">
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <amp-img src="./img/themes_2/bar.webp" width="600" height="450" alt="Happy Hour Monday through Friday 5 PM"
-            layout="responsive"></amp-img>
+          <a href="https://www.kqzyfj.com/click-101316119-11430556">
+
+            <amp-img src="./img/tea/pexels-d-ng-nhan-324384-1477542.webp" width="600" height="450"
+              alt="Happy Hour Monday through Friday 5 PM" layout="responsive"></amp-img>
+          </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
-              <h2 class="h1 bold">Follow the Link to Your Next Purchase!</h2><a href="https://www.cj.com">
+              <h2 class="h1 bold">Follow the Link to Find Some Amazing Tea!</h2><a
+                href="https://www.kqzyfj.com/click-101316119-11430556">
                 <p class="h4">Click Me!</p>
               </a>
             </header>
@@ -2470,22 +2521,34 @@ limitations under the License.
 
       </div>
 
-      <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
-      <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
-      <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
-        <amp-img src="./img/themes_2/hero.webp" width="300" height="200" alt="Dining area" on="tap:lightbox"
-          role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/bar.webp" width="267" height="200" alt="Bar area" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/waffles.webp" width="300" height="200" alt="Caramel Banana Waffles"
-          on="tap:lightbox" role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/soup.webp" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-          role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/steak.webp" width="300" height="200" alt="Steak" on="tap:lightbox" role="button"
-          tabindex="0"></amp-img>
-        <amp-img src="./img/themes_2/pie.webp" width="300" height="200" alt="Key Lime Pie" on="tap:lightbox"
-          role="button" tabindex="0"></amp-img>
-      </amp-carousel>
+      <p class="mb1">But wait—there’s more! Rooibos brings its naturally sweet, caffeine-free goodness, and pu-erh
+        offers a rich, fermented
+        experience for the true tea aficionados. Oolong dances between the worlds of green and black tea, giving you a
+        nuanced
+        sip every time. And then there are the flavored teas, bursting with creativity—think spiced apple chai for cozy
+        fall
+        vibes or fruity favorites like peach or blueberry for a summer escape. Tea is a powerhouse of antioxidants and
+        polyphenols too!</p>
+      <p class="mb1">When the holidays roll around, seasonal teas like candy cane or Christmas spice create a festive
+        feeling in every sip.
+        Feeling a little off-balance? Wellness and detox blends are there to help you find your center. And whether
+        you’re a
+        loose tea enthusiast or prefer the convenience of tea bags, there’s always something to suit your style.</p>
+
+
+      <p class="mb1">And let’s not forget the tools of the trade—the beautiful teaware that transforms brewing tea into
+        a full sensory
+        experience. Elegant teapots, perfectly balanced kettles, artful cups, precision strainers—they’re not just
+        functional;
+        they’re part of the ritual. Choosing your favorite teaware is as personal as picking your tea, and together,
+        they turn
+        every cup into a moment worth savoring.</p>
+      <p class="mb1">Tea isn’t just a drink; it’s a world waiting to be explored. Every variety, every flavor, and every
+        tool brings with it
+        the promise of something special—a moment to pause, reflect, or simply delight in the here and now. Whether
+        you’re
+        steeping, sipping, or savoring, tea has a way of making every moment just a little bit better.</p>
+
     </article>
   </main>
 
@@ -2494,7 +2557,7 @@ limitations under the License.
 
 
     <small>
-      © Minnowspace
+      © MINNOWSPACE 2024
     </small>
   </footer>
   <!-- End Footer -->
