--- a/cars.html
+++ b/cars.html
@@ -25,7 +25,7 @@ This is a sample template for implementing live blogs in AMP.
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
   <!-- Import `amp-live-list` for implementing a live blog. -->
   <script async custom-element="amp-live-list" src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"></script>
-  <link rel="canonical" href="<% canonical %>">
+  <link rel="canonical" href="https://www.minnowspace.com/cars.html">
   <meta name="viewport" content="width=device-width">
   <style amp-boilerplate>
     body {
