--- a/hotels.html
+++ b/hotels.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>Hotels</title>
-  <link rel="canonical" href="https://www.ampstart.com/templates/themes_2/home.amp">
+  <link rel="canonical" href="https://www.minnowspace.com/hotels.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
