--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8" />
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="index.html" />
+  <link rel="canonical" href="https://www.minnowspace.com/index.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
   <meta name="amp-google-client-id-api" content="googleanalytics" />
