--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -18,7 +18,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="https://bcebel.github.io/MNNWS/">
+  <link rel="canonical" href="https://www.minnowspace.com/land-see.amp.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
 
