--- a/menu.amp.html
+++ b/menu.amp.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8" />
   <title>Beck &amp; Galo – Menu</title>
-  <link rel="canonical" href="https://www.ampstart.com/templates/themes_2/menu.amp" />
+  <link rel="canonical" href="https://www.minnowspace.com/menu.amp.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="amp-google-client-id-api" content="googleanalytics" />
 
