--- a/plaid.html
+++ b/plaid.html
@@ -2432,12 +2432,12 @@ limitations under the License.
   </div>
 
   <main id="content" role="main">
-          <a href="https://amzn.to/3VJA1jc" 
-            style="background-image:url(./img/plaid/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem">
-            Click Here For Amazing Plaid on Amazon!
-          </a>
+    <a href="https://amzn.to/3VJA1jc"
+      style="background-image:url(./img/plaid/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem">
+      Click Here For Amazing Plaid on Amazon!
+    </a>
     <article class="px3">
-      <h2 id="story" class="my4 theme2-anchored">Big, Tall & Plaid</h2>
+      <h2 id="story" class="my4 theme2-anchored">We've Gone Plaid!</h2>
 
 
       <p class="mb1 ampstart-dropcap">Columbia Plaid Shirts for Men https://amzn.to/3VJA1jc</p>
@@ -2451,34 +2451,66 @@ limitations under the License.
 
       <p class="mb1">Plaid shirts: the timeless wardrobe staple that embodies comfort, style, and rugged charm. There’s
         something about the
-        cozy embrace of a plaid flannel shirt that feels like a warm hug on a crisp day. Whether layered over a tee or buttoned
+        cozy embrace of a plaid flannel shirt that feels like a warm hug on a crisp day. Whether layered over a tee or
+        buttoned
         up
         snugly against the chill, plaid shirts are not just clothing—they’re an experience. They have an effortless way
         of
         combining coziness and character, making them a favorite for both everyday wear and special outdoor adventures.
       </p>
-            <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
-            <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
-            <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
-              <amp-img src="./img/plaid/pexels-carolinoportraits-2914286.jpg" width="300" height="200" alt="Dining area"
-                on="tap:lightbox" role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-content-prod-co-5908367.jpg" width="300" height="200" alt="Pumpkin Soup"
-                on="tap:lightbox" role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-tima-miroshnichenko-6474475.jpg" width="300" height="200" alt="Steak"
-                on="tap:lightbox" role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-roman-odintsov-5933373.jpg" width="300" height="200" alt="Key Lime Pie"
-                on="tap:lightbox" role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-rethaferguson-4177747.jpg" width="300" height="200" alt="Pumpkin Soup"
-                on="tap:lightbox" role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-nurseryart-367273.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                role="button" tabindex="0"></amp-img>
+      <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
+      <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
+      <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
+        <amp-img src="./img/plaid/pexels-carolinoportraits-2914286.jpg" width="300" height="200" alt="Dining area"
+          on="tap:lightbox" role="button" tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p1.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
               <amp-img src="./img/plaid/pexels-jenyzest-3563941.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
                 role="button" tabindex="0"></amp-img>
-              <amp-img src="./img/plaid/pexels-giannekarla-58592.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox"
-                role="button" tabindex="0"></amp-img>
-            </amp-carousel>
 
-<p class="mb1">
+        <amp-img src="./img/plaid/p3.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p4.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p5.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p6.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p7.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p8.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p9.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p10.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p11.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p12.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p13.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p14.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p15.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p16.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p17.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p18.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p19.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p20.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+        <amp-img src="./img/plaid/p21.jpg" width="300" height="200" alt="Pumpkin Soup" on="tap:lightbox" role="button"
+          tabindex="0"></amp-img>
+    
+        
+      </amp-carousel>
+
+      <p class="mb1">
         Plaid brings to mind images of Canadian lumberjacks sawing mighty trees in the wilderness, their shirts rolled
         at the
         sleeves as they work against the backdrop of towering pines and pristine lakes. It whispers tales of the wild
@@ -2486,6 +2518,9 @@ limitations under the License.
         where cabins nestled in the mountains, with canoes resting on the shores, set the stage for rugged escapades.
         Plaid
         shirts are a nod to that outdoorsy spirit, a connection to nature and simpler times.</p>
+      <a href="https://amzn.to/3VJA1jc">
+        <img src="./img/plaid/plaidman.png" width="285" height="285" alt="" border="0" style="border-radius:2em" />click
+        me for stunning plaid</a>
       <p class="mb1">
         And let’s face it: guys look undeniably hunky in plaid. There’s a magnetic confidence that comes with wearing a
         shirt
@@ -2496,19 +2531,30 @@ limitations under the License.
         him—not just because it’s stylish and comfortable, but because it says something about you, the gift-giver. It’s
         a
         thoughtful choice, brimming with personality, and it’ll stand out in his closet for years to come.</p>
-                      <a href="https://amzn.to/3VJA1jc">
-                        <img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="" border="0"
-                          style="border-radius:2em" /></a>
-              <p class="mb1">
-                For women, plaid shirts are just as versatile and appealing. Whether worn oversized with leggings for a
-                laid-back look
-                or cinched at the waist for a touch of tailored style, flannel shirts offer comfort without sacrificing fashion.
-                They’re
-                perfect for layering over a tank top on cool mornings or tying around the waist as a casual accessory. The
-                softness of
-                flannel combined with the classic plaid pattern makes these shirts a go-to choice for outdoor adventures or cozy
-                nights
-                in.</p>
+      <a href="https://amzn.to/4gAIWLz">
+        <img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="" border="0"
+          style="border-radius:2em" />click me for women's plaid shirts</a>
+      <p class="mb1">
+        For women, plaid shirts are just as versatile and appealing. Whether worn oversized with leggings for a
+        laid-back look
+        or cinched at the waist for a touch of tailored style, flannel shirts offer comfort without sacrificing fashion.
+        They’re
+        perfect for layering over a tank top on cool mornings or tying around the waist as a casual accessory. The
+        softness of
+        flannel combined with the classic plaid pattern makes these shirts a go-to choice for outdoor adventures or cozy
+        nights
+        in.</p>
+      <a href="https://amzn.to/3ZIiqJs">
+        <img src="./img/plaid/pexels-dajana-reci-289671698-16643767.jpg" width="300" height="300" alt="" border="0"
+          style="border-radius:2em" />click here for fashion forward plaid!</a>
+      <p class="mb1">
+      <p class="mb1">
+      <p class="mb1">
+        Plaid shirts also make a great fashion statement when paired with boots and a scarf, embodying a chic yet
+        practical
+        aesthetic that transitions seamlessly from errands to evening campfires. Whether embracing the rugged outdoorsy
+        look or
+        incorporating plaid into an everyday wardrobe, women can effortlessly make these shirts their own.</p>
       <p class="mb1">
         But let’s talk about the real challenge: finding the right plaid shirt for the big AND tall guy in your life. If
         you’re
@@ -2519,10 +2565,10 @@ limitations under the License.
         fit or comfort—and often both. Too short, and your shirt starts to creep up toward your belly button. Too tight,
         and
         suddenly your rugged look feels more like you’re about to burst out of your clothes.</p>
-              <a href="https://amzn.to/3VJA1jc">
-                <img src="./img/plaid/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300" alt="" border="0"
-                  style="border-radius:2em" /></a>
-              <p class="mb1">
+      <a href="https://amzn.to/4flohtS">
+        <img src="./img/plaid/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300" alt=""
+          border="0" style="border-radius:2em" />click me for big & tall flannel!</a>
+      <p class="mb1">
       <p class="mb1">
         As a big and tall guy myself, I can tell you: the average shirt just doesn’t cut it. I’ve spent more time than I
         care to
@@ -2561,12 +2607,11 @@ limitations under the License.
         and imbued
         with familiarity. It’s an instant mood booster, a small reminder of connection and warmth—both literal and
         figurative.</p>
+      <a href="https://amzn.to/4gAIWLz">
+        <img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="" border="0"
+          style="border-radius:2em" />click me for women's plaid shirts</a>
       <p class="mb1">
-        Plaid shirts also make a great fashion statement when paired with boots and a scarf, embodying a chic yet
-        practical
-        aesthetic that transitions seamlessly from errands to evening campfires. Whether embracing the rugged outdoorsy
-        look or
-        incorporating plaid into an everyday wardrobe, women can effortlessly make these shirts their own.</p>
+
       <p class="mb1">
         So if you’re shopping for plaid shirts, don’t settle for anything less than the perfect fit. Whether it’s for
         yourself
