--- a/plaid.html
+++ b/plaid.html
@@ -2565,10 +2565,11 @@ limitations under the License.
         fit or comfort—and often both. Too short, and your shirt starts to creep up toward your belly button. Too tight,
         and
         suddenly your rugged look feels more like you’re about to burst out of your clothes.</p>
+            <figure class="ampstart-image-with-heading  m0 relative mb4">
       <a href="https://amzn.to/4flohtS">
         <img src="./img/plaid/d2qv53d-c3d0fa99-c4d9-4694-ad43-007086f850ab.jpg" width="300" height="300" alt=""
           border="0" style="border-radius:2em" />click me for big & tall flannel!</a>
-      <p class="mb1">
+      </figure>
       <p class="mb1">
         As a big and tall guy myself, I can tell you: the average shirt just doesn’t cut it. I’ve spent more time than I
         care to
@@ -2589,7 +2590,7 @@ limitations under the License.
         <a href="https://amzn.to/4flohtS">
 
           <amp-img src="./img/plaid/11884158495_6136a39fba_b.jpg" width="600" height="450"
-            alt="Happy Hour Monday through Friday 5 PM" layout="responsive"></amp-img>
+            alt="Lumberjack" layout="responsive"></amp-img>
         </a>
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
@@ -2607,10 +2608,7 @@ limitations under the License.
         and imbued
         with familiarity. It’s an instant mood booster, a small reminder of connection and warmth—both literal and
         figurative.</p>
-      <a href="https://amzn.to/4gAIWLz">
-        <img src="./img/plaid/pexels-giannekarla-58592.jpg" width="285" height="190" alt="" border="0"
-          style="border-radius:2em" />click me for women's plaid shirts</a>
-      <p class="mb1">
+
 
       <p class="mb1">
         So if you’re shopping for plaid shirts, don’t settle for anything less than the perfect fit. Whether it’s for
